--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "big-number": "^2.0.0",
     "ethers": "^5.6.8",
-    "next": "12.1.6",
+    "next": ">=12.22.0",
     "next-images": "^1.8.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
