--- a/package.json
+++ b/package.json
@@ -24,16 +24,9 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   },
-  "browserlist": {
-    "production": [
+  "browserlist": [
       ">0.2%",
       "not dead",
       "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
-  }
 }
